--- a/package.json
+++ b/package.json
@@ -5,18 +5,8 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
-        "denque": "^2.1.0",
         "dotenv": "^16.4.5",
-        "generate-function": "^2.3.1",
-        "iconv-lite": "^0.6.3",
-        "is-property": "^1.0.2",
-        "long": "^5.2.3",
-        "lru-cache": "^8.0.5",
-        "mysql2": "^3.9.4",
-        "named-placeholders": "^1.1.3",
-        "safer-buffer": "^2.1.2",
-        "seq-queue": "^0.0.5",
-        "sqlstring": "^2.3.3"
+        "mysql2": "^3.9.4"
     },
     "devDependencies": {},
     "scripts": {
